--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,9 @@ services:
       - PROJECT_NAME=${PROJECT_NAME}
     volumes:
       - wp_data:/var/www/html
-      - ./nginx.conf.template:/etc/nginx/conf.d/default.conf.template
-      - ./restrictions.conf:/etc/nginx/restrictions.conf
-      - ./entrypoint.sh:/docker-entrypoint.d/entrypoint.sh
+      - ./nginx/nginx.conf.template:/etc/nginx/conf.d/default.conf.template
+      - ./nginx/restrictions.conf:/etc/nginx/restrictions.conf
+      - ./nginx/entrypoint.sh:/docker-entrypoint.d/entrypoint.sh
     entrypoint: ["/bin/sh", "-c", "/docker-entrypoint.d/entrypoint.sh && exec nginx -g 'daemon off;'"]
     depends_on:
       - wordpress
@@ -62,7 +62,7 @@ services:
       - MYSQL_PASSWORD=${WORDPRESS_DB_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
-      - ./mysql-dump.sh:/mysql-dump.sh:ro
+      - ./db/mysql-dump.sh:/mysql-dump.sh:ro
       - ./backups:/backup
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
