Better management of traefik network

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,14 @@
 PROJECT_NAME=myproject
 COMPOSE_PROJECT_NAME=${PROJECT_NAME}
 
-# HTTP
+# HTTP and main domain
 APP_MAIN_DOMAIN=local-${PROJECT_NAME}
+# APP_TRAEFIK_DOMAINS should be a list of domains for this service, separated by `,` for Traefik routing
+APP_TRAEFIK_DOMAINS=myproject.example.com`,`myproject.example-other.com
 APP_PORT=42080
+
+# name of your external network for traefik
+TRAEFIK_NETWORK=hoa_network
 
 # WordPress
 WP_VERSION=latest
@@ -16,12 +21,6 @@ MYSQL_ROOT_PASSWORD=changeme
 WORDPRESS_DB_NAME=wp_${PROJECT_NAME}
 WORDPRESS_DB_USER=wp_user
 WORDPRESS_DB_PASSWORD=wp_secret
-
-# Network
-SUBNET=172.25.0.0/16
-WORDPRESS_IP=172.25.0.10
-NGINX_IP=172.25.0.11
-MYSQL_IP=172.25.0.15
 
 # Backup
 BACKUP_CRON_EXPRESSION="0 0 * * 1"
