--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - traefik.http.routers.${PROJECT_NAME}.rule=Host(`${APP_TRAEFIK_DOMAINS}`)
       - traefik.http.routers.${PROJECT_NAME}.tls.certresolver=default
       - traefik.http.services.${PROJECT_NAME}.loadbalancer.server.port=80
-
+      - traefik.docker.network=${TRAEFIK_NETWORK}
   db:
     image: mysql:5.7
     restart: ${RESTART_POLICY:-always}
